# sevensegmentdisplay

./: CMakeLists.txt
headers/glad/: glad.h
headers/sevensegmentdisplay/: Main.hpp  Renderer.hpp  Types.hpp
src/: Main.cpp  Renderer.cpp  glad.c
